# sdl-engine

./: .gitmodules  Makefile  README.md  debug  main  ss  test.c  things-in-mind
c/: Makefile  main  sdl-engine.sublime-workspace
cpp/: .clang-format  .gitignore  CMakeLists.txt  debug  graphics.ini  testa
cpp/include/game-engine/: engine.h
cpp/include/game-engine/core/: .resolution.h.swp  .settings.h.swp  flat_map.h  game.h  json.h  map.h  memory.h  resolution.h  settings.h  state.h  string.h  variant.h
cpp/include/game-engine/graphics/: .camera.h.swp  .color.h.swp  .light.h.swp  camera.h  color.h  heightmap.h  light.h  mesh.h  render.h  scene.h  ui.h  vertex.h
cpp/include/game-engine/io/: scene.h  state.h
cpp/include/game-engine/map/: map.h
cpp/include/game-engine/math/: .point.h.swp  point.h  sparse.h  util.h
cpp/include/game-engine/util/: string.h
cpp/projects/VS/: start.bat
cpp/projects/sublime/: debian.sublime-workspace  windows.sublime-project  windows.sublime-workspace
cpp/src/: engine.cc  main.cc  settings.cc
cpp/src/core/: game.cc  json.cc  json.t.cc  map.cc  string.t.cc
cpp/src/game-engine/core/: game.cc  map.cc
cpp/src/game-engine/graphics/: camera.cc  color.cc  heightmap.cc  light.cc  render.cc
cpp/src/game-engine/io/: scene.cc
cpp/src/game-engine/map/: map.cc
cpp/src/game-engine/math/: point.cc
cpp/src/game-engine/util/: string.cc
cpp/src/graphics/: color.cc  render.cc
cpp/src/io/: state.cc
cpp/src/math/: .point.c.swp  .point.cc.swp  fixed.t.cc  point.cc  point.t.cc  sparse.t.cc
cpp/test/: CMakeLists.txt
cpp/test/core/: string.t
cpp/test/game-engine/core/: map.t.cc
cpp/test/game-engine/math/: point.t.cc
cpp/test/game-engine/util/: string.t.cc
cpp/test/math/: point.t.cc
cpp_/: makefile  simd.cod  simd.t.cod  test.cc
include/: contiguous.h  game.h  point.h  settings.h  sparse.h  trimatrix.h
src/: contiguous.c  flowfield.c  game.c  heightmap.c  light.c  main.c  map.c  point.c  render.c  scene.c  settings.c  sparse.c  trimatrix.c
test/: a.out  contiguous-test.c  costfield-stress  heightmap.c  hm  map-strss  map.map  map2.map  (+7 more)
(+99 files in other folders)
